Use loom-compatibility, avoid hacking into JDK